--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Garvit Sharma</title>
+		<title>Brian Serwadda</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -10,7 +10,7 @@
 		<meta name="title" property="og:title" content="Personal Portfolio" />
 		<meta property="og:type" content="website" />
 		<meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51835372328_6a9e4e82b4_z.jpg" />
-		<meta name="description" property="og:description" content="Personal Portfolio" /><meta name="author" content="Garvit Sharma" />
+		<meta name="description" property="og:description" content="Personal Portfolio" /><meta name="author" content="Brian Serwadda" />
 	</head>
 	<body class="is-preload">
 
@@ -24,11 +24,11 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Blue</h1>
-								<p>Quantitative Trading | Execution Optimization | Market Microstructure</p>
+								<h1>Brian</h1>
+								<p>Quantitative Analysis | Financial Markets | Machine Learning | Data Analysis | A.I</p>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/garvits/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/lbluel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/brian-serwadda-321052196/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/sbrian05" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</div>
 						</div>
@@ -38,7 +38,6 @@
 								<li><a href="#about">Edu</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#pensees">Pensées</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -50,7 +49,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
-								<p>Interested in Quantitative Systematic Trading - Equities, Option, Vol. 
+								<p>I’m Brian Serwadda, with a passion for financial markets, AI, data analysis, machine learning, and real estate. I’m driven by the power of data to uncover insights and create value across industries. From building predictive models and forecasting market trends to analyzing real estate investments and financial strategies, I enjoy exploring how technology and analytics can transform decision-making. 
 								</p>
 							</article>
 
@@ -58,49 +57,46 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<div>
-									<h4 style="float:left">Senior Executive - Analytics<br />Firstsource</h4>
-									<h4 style="float:right">Jun 2020 - Apr 2021</h4>
+									<h4 style="float:left">Financial Data Analyst<br />Boston Financial</h4>
+									<h4 style="float:right">January 2025 - March 2025</h4>
 								</div>
 								<ul style="clear:both;">
 									<li>
-										Developed and implemented a Multilayer Perceptron based classification model in Python with an accuracy of 96% and an AUC of 0.73 to approximate error propensity and to flag erroneous insurance forms; tripled error detection rate and quartered audit volume.
+										Analyzed 500+ year-end financial statements for 2,300+ LIHTC properties, ensuring accuracy and regulatory compliance 
 									</li>
 									<li>
-										Synthesized high-dimensional training and testing datasets with approximately 300+ features from a perpetually dynamic unstructured database of pre-audited insurance forms, comprising of OCR data, processing agent, field, and form characteristics.
+										Reconciled $50M+ in portfolio financials and collaborated with reporting analysts to improve data quality and reporting workflows 
 									</li>
 									<li>
-										Built and supervised regression and classification models in Python to predict payer propensity to make copay payments owed to leading partner hospitals in the US; doubled collections to roughly US $ 4MM (projected), adjusting for data drift due to COVID.
-									</li>
-									<li>
-										Researched and experimented with SMOTE, Deep Feature Synthesis (Featuretools), and Factor Analysis to manage imbalanced target classes, to automate primitive feature engineering, and to statistically augment dimensionality reduction.
+										Maintained and updated proprietary financial systems supporting investor reports and underwriting processes
 									</li>
 								</ul>
 								<div>
-									<h4 style="float:left">Data Science Analyst<br />Firstsource</h4>
-									<h4 style="float:right">Jan 2020 - Apr 2020</h4>
+									<h4 style="float:left">Commercial Real Estate Intern<br />Berkshire Real Estate</h4>
+									<h4 style="float:right">Semptember 2024 - December 2024</h4>
 								</div>
 								<ul style="clear:both;">
 									<li>
-										Migrated Healthcare Collections payer prioritization scoring process from Excel to an automated and collaboratively designed Python pipeline; scaled-down scoring time from 5 hours to 30 minutes a day, including client report generation and sharing.
+										Developed and presented financial models to assess $10M+ in real estate deals, leveraging Excel and power bi.
 									</li>
 									<li>
-										Managed a credit card debt collections project, under ex-Chief Analytics Officer supervision; tracked KPI's, tabulated results, corresponded with key stakeholders, interacted with 3 cross-functional teams, and reported progress on a bi-weekly basis.
+										Conducted market research, trend analysis, and volume tracking to support investment strategy and capital structure planning. 
 									</li>
 									<li>
-										Analyzed and retrained payer prioritization models based on monthly performance assessments and A/B testing results, to enhance client confidence and model intelligibility; generated critical insights to boost qualitative business process understanding.
+										Projected 15% ROI in collaboration with leadership through optimization of deal-level inputs.
 									</li>
 								</ul>
 							</ul>
 							<div>
-								<h4 style="float: left;">Credit Risk Intern<br />Faircent.com</h4>
-								<h4 style="float:right;">May 2019 - Jun 2019</h4>
+								<h4 style="float: left;">Teaching Assistant<br />Boston University</h4>
+								<h4 style="float:right;">September 2024 - December 2024</h4>
 							</div>
 							<ul style="clear:both;">
 								<li>
-									Interned under the Chief Marketing Manager, as an aid to the IT Team. This team supervised Product Package Development, Rule Engine Optimisation, and Credit Default Analysis using predictive modelling.
+									Led lab sessions on Python and R-based model building (supervised/unsupervised ML, forecasting, NLP)
 								</li>
 								<li>
-									Conceptualized and formulated proof-of-concept models using k-means and hierarchical clustering in R to segment debtor pools based on 'creditworthiness' of unsecured personal loan applicants; relied on alternate sources of credit history, such as digital, demographic, and financial datasets.
+									Guided students through predictive modeling exercises including financial risk, time-series forecasting, and market simulation. 
 								</li>
 							</ul>
 							</article>
@@ -111,11 +107,11 @@
 							<article id="about">
 								<h2 class="major">Education</h2>
 								<div>
-									<h4 style="float:left;">Columbia University<br />Master of Science, Financial Engineering</h4>
-									<h4 style="float:right;">August 2021 - December 2022</h4>
+									<h4 style="float:left;">Boston University<br />Master of Science, Business Analytics</h4>
+									<h4 style="float:right;">September 2023 - May 2025</h4>
 								</div>
 								<p style="clear:both;">
-									<i><b>Relevant Coursework:</b></i> Deep Learning, Monte-Carlo Simulation Methods, Statistical Analysis and Time Series, Financial Engineering Continuous Time Models, Optimization Models and Methods for Financial Engineering, Machine Learning for Financial Engineering, Stochastic Models, Foundations for Financial Engineering</p>
+									<i><b>Relevant Coursework:</b></i> Deep Learning, Monte-Carlo Simulation Methods, Statistical Analysis and Time Series, Machine Learning, Enterprise Risk Analytics, Web Analytics, Data Mining, Marketing Analytics Derivative securities and markets, Quantitative methods for finance, financial Analytics, Operations management.</p>
 								</article>
 
 						<!-- Contact -->
@@ -142,20 +138,10 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/garvits/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/lbluel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/brian-serwadda-321052196/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/sbrian05" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
-
-						<!-- pensées -->
-						<article id="pensees">
-							<h2 class="major">Pensées</h2>
-							<ul>
-								<li><a href="Why.html">Why? </a></li>
-							</ul>
-						</article>
-				</div>
-
 				<!-- Footer -->
 					<footer id="footer">
 					</footer>
