--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta name="title" property="og:title" content="Personal Portfolio" />
 		<meta property="og:type" content="website" />
 		<meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51835372328_6a9e4e82b4_z.jpg" />
-		<meta name="description" property="og:description" content="Personal Portfolio" /><meta name="author" content="Garvit Sharma" />
+		<meta name="description" property="og:description" content="Personal Portfolio" /><meta name="author" content="Brian Serwadda" />
 	</head>
 	<body class="is-preload">
 
@@ -24,7 +24,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Blue</h1>
+								<h1>Brian</h1>
 								<p>Quantitative Trading | Execution Optimization | Market Microstructure</p>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/garvits/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
