--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Brian</h1>
-								<p>Quantitative Trading | Execution Optimization | Market Microstructure</p>
+								<p>Quantitative Analysis | Financial Markets | Machine Learning | Data Analysis | A.I</p>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/garvits/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/lbluel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/brian-serwadda-321052196/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/sbrian05" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</div>
 						</div>
@@ -38,7 +38,6 @@
 								<li><a href="#about">Edu</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#contact">Contact</a></li>
-								<li><a href="#pensees">Pensées</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
