--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
-								<p>Interested in Quantitative Systematic Trading - Equities, Option, Vol. 
+								<p>Interested in Quantitative Systematic Trading (Equities, Options, Volatility), financial markets, AI, data analysis, machine learning, and real estate. 
 								</p>
 							</article>
 
@@ -57,21 +57,18 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<div>
-									<h4 style="float:left">Senior Executive - Analytics<br />Firstsource</h4>
-									<h4 style="float:right">Jun 2020 - Apr 2021</h4>
+									<h4 style="float:left">Financial Data Analyst<br />Boston Financial</h4>
+									<h4 style="float:right">January 2025 - March 2025</h4>
 								</div>
 								<ul style="clear:both;">
 									<li>
-										Developed and implemented a Multilayer Perceptron based classification model in Python with an accuracy of 96% and an AUC of 0.73 to approximate error propensity and to flag erroneous insurance forms; tripled error detection rate and quartered audit volume.
+										Analyzed 500+ year-end financial statements for 2,300+ LIHTC properties, ensuring accuracy and regulatory compliance.
 									</li>
 									<li>
-										Synthesized high-dimensional training and testing datasets with approximately 300+ features from a perpetually dynamic unstructured database of pre-audited insurance forms, comprising of OCR data, processing agent, field, and form characteristics.
+										Reconciled $50M+ in portfolio financials and collaborated with reporting analysts to improve data quality and reporting workflows.
 									</li>
 									<li>
-										Built and supervised regression and classification models in Python to predict payer propensity to make copay payments owed to leading partner hospitals in the US; doubled collections to roughly US $ 4MM (projected), adjusting for data drift due to COVID.
-									</li>
-									<li>
-										Researched and experimented with SMOTE, Deep Feature Synthesis (Featuretools), and Factor Analysis to manage imbalanced target classes, to automate primitive feature engineering, and to statistically augment dimensionality reduction.
+										Maintained and updated proprietary financial systems supporting investor reports and underwriting processes. 
 									</li>
 								</ul>
 								<div>
