--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
 							<article id="about">
 								<h2 class="major">Education</h2>
 								<div>
-									<h4 style="float:left;">Columbia University<br />Master of Science, Financial Engineering</h4>
-									<h4 style="float:right;">August 2021 - December 2022</h4>
+									<h4 style="float:left;">Boston University<br />Master of Science, Applied Business Analytics</h4>
+									<h4 style="float:right;">September 2023 - December 2024</h4>
 								</div>
 								<p style="clear:both;">
-									<i><b>Relevant Coursework:</b></i> Deep Learning, Monte-Carlo Simulation Methods, Statistical Analysis and Time Series, Financial Engineering Continuous Time Models, Optimization Models and Methods for Financial Engineering, Machine Learning for Financial Engineering, Stochastic Models, Foundations for Financial Engineering</p>
+									<i><b>Relevant Coursework:</b></i> Deep Learning, Monte-Carlo Simulation Methods, Statistical Analysis and Time Series, Machine Learning, Enterprise Risk Analytics, Web Analytics, Data Mining, Marketing Analytics Derivative securities and markets, Quantitative methods for finance, financial Analytics, Operations management.</p>
 								</article>
 
 						<!-- Contact -->
