--- a/index.html
+++ b/index.html
@@ -72,31 +72,31 @@
 									</li>
 								</ul>
 								<div>
-									<h4 style="float:left">Data Science Analyst<br />Firstsource</h4>
-									<h4 style="float:right">Jan 2020 - Apr 2020</h4>
+									<h4 style="float:left">Commercial Real Estate Intern<br />Berkshire Real Estate</h4>
+									<h4 style="float:right">September 2024 - November 2024</h4>
 								</div>
 								<ul style="clear:both;">
 									<li>
-										Migrated Healthcare Collections payer prioritization scoring process from Excel to an automated and collaboratively designed Python pipeline; scaled-down scoring time from 5 hours to 30 minutes a day, including client report generation and sharing.
+										Developed and presented financial models to assess $10M+ in real estate deals, leveraging Excel. 
 									</li>
 									<li>
-										Managed a credit card debt collections project, under ex-Chief Analytics Officer supervision; tracked KPI's, tabulated results, corresponded with key stakeholders, interacted with 3 cross-functional teams, and reported progress on a bi-weekly basis.
+										Conducted market research, trend analysis, and volume tracking to support investment strategy and capital structure planning.
 									</li>
 									<li>
-										Analyzed and retrained payer prioritization models based on monthly performance assessments and A/B testing results, to enhance client confidence and model intelligibility; generated critical insights to boost qualitative business process understanding.
+										Projected 15% ROI in collaboration with leadership through optimization of deal-level inputs.
 									</li>
 								</ul>
 							</ul>
 							<div>
-								<h4 style="float: left;">Credit Risk Intern<br />Faircent.com</h4>
-								<h4 style="float:right;">May 2019 - Jun 2019</h4>
+								<h4 style="float: left;">Teaching Assistant<br />Boston University</h4>
+								<h4 style="float:right;">September 2024 - December 2024</h4>
 							</div>
 							<ul style="clear:both;">
 								<li>
-									Interned under the Chief Marketing Manager, as an aid to the IT Team. This team supervised Product Package Development, Rule Engine Optimisation, and Credit Default Analysis using predictive modelling.
+									Led lab sessions on Python and R-based model building (supervised/unsupervised ML, forecasting, NLP).
 								</li>
 								<li>
-									Conceptualized and formulated proof-of-concept models using k-means and hierarchical clustering in R to segment debtor pools based on 'creditworthiness' of unsecured personal loan applicants; relied on alternate sources of credit history, such as digital, demographic, and financial datasets.
+									Guided students through predictive modeling exercises including financial risk, time-series forecasting, and market simulation.
 								</li>
 							</ul>
 							</article>
@@ -138,8 +138,8 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/garvits/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://github.com/lbluel" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/brian-serwadda-321052196/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
+									<li><a href="https://github.com/sbrian05" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
