--- a/index.html
+++ b/index.html
@@ -144,12 +144,21 @@
 							</article>
 
 						<!-- pensées -->
-						<article id="pensees">
-							<h2 class="major">Pensées</h2>
-							<ul>
-								<li><a href="Why.html">Why? </a></li>
-							</ul>
-						</article>
+						<article id="project">
+							<h2 class="major">Project</h2>
+							<p>
+							        You can explore my projects on 
+                                                        <a href="https://github.com/yourusername" target="_blank">GitHub</a>, 
+                                                        starting with <strong>Exus Research</strong>, an AI-driven research assistant designed to simplify and enhance the research process by aggregating results from academic and web-based sources. 
+                                                        Built with React, TypeScript, Tailwind CSS, and Supabase, Exus Research provides real-time, multi-source search across platforms like arXiv, PubMed, JSTOR, Wikipedia, Reddit, Google Scholar, and more.
+                                                      </p>
+                                                      <p>
+                                                      I’ve also developed my <strong>personal website</strong>, created from scratch using HTML, CSS, and JavaScript, showcasing my work and providing a personal touch to my portfolio.
+                                                      </p>
+                                                      <p>
+                                                      In addition, I’ve worked on various <strong>machine learning projects</strong>, implementing both supervised and unsupervised models using R and Python to solve data-driven problems and extract actionable insights.
+                                                   </p>
+                                         </article>
 				</div>
 
 				<!-- Footer -->
