--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#about">Edu</a></li>
 								<li><a href="#work">Work</a></li>
+								<li><a href="#project">Project</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -143,7 +144,7 @@
 								</ul>
 							</article>
 
-						<!-- pensées -->
+						<!-- project -->
 						<article id="project">
 							<h2 class="major">Project</h2>
 							<p>
