--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 							<h2 class="major">Project</h2>
 							<p>
 							        You can explore my projects on 
-                                                        <a href="https://github.com/yourusername" target="_blank">GitHub</a>, 
+                                                        <a href="https://github.com/sbrian05" target="_blank">GitHub</a>, 
                                                         starting with <strong>Exus Research</strong>, an AI-driven research assistant designed to simplify and enhance the research process by aggregating results from academic and web-based sources. 
                                                         Built with React, TypeScript, Tailwind CSS, and Supabase, Exus Research provides real-time, multi-source search across platforms like arXiv, PubMed, JSTOR, Wikipedia, Reddit, Google Scholar, and more.
                                                       </p>
