--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+						<p>&copy; Brian Serwadda. Built with passion and precision.</p>
 					</footer>
 			</div>
 
