--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#about">Edu</a></li>
 								<li><a href="#work">Work</a></li>
-								<li><a href="#project">Project</a></li>
+								<li><a href="#project">Projects</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -146,7 +146,7 @@
 
 						<!-- project -->
 						<article id="project">
-							<h2 class="major">Project</h2>
+							<h2 class="major">Projects</h2>
 							<p>
 							        You can explore my projects on 
                                                         <a href="https://github.com/sbrian05" target="_blank">GitHub</a>, 
