--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Brian</h1>
-								<p>Quantitative Analysis | Financial Markets | Machine Learning | Data Analysis | A.I</p>
+								<p>Quantitative Analysis | Financial Markets | Machine Learning | Data Analysis & Modelling | A.I</p>
 								<ul class="icons">
 									<li><a href="https://www.linkedin.com/in/brian-serwadda-321052196/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									<li><a href="https://github.com/sbrian05" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
@@ -50,7 +50,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
-								<p>Interested in Quantitative Systematic Trading (Equities, Options, Volatility), financial markets, AI, data analysis, machine learning, and real estate. 
+								<p>Interested in Quantitative Systematic Trading (Equities, Options, Volatility), financial markets, A.I, data analysis, machine learning, and real estate. 
 								</p>
 							</article>
 
