--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
-								<p>Interested in Quantitative Systematic Trading (Equities, Options, Volatility), financial markets, A.I, data analysis, machine learning, and real estate. 
+								<p>Interested in Quantitative Systematic Trading (Equities, Options, Volatility), financial markets, A.I, data analysis & modelling, machine learning, and real estate. 
 								</p>
 							</article>
 
