--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Personal Portfolio" />
 		<meta name="title" property="og:title" content="Personal Portfolio" />
 		<meta property="og:type" content="website" />
-		<meta name="image" property="og:image" content="https://live.staticflickr.com/65535/51835372328_6a9e4e82b4_z.jpg" />
+		<meta name="image" property="og:image" content="https://www.flickr.com/photos/202689445@N08/shares/NB6J0050Qh" />
 		<meta name="description" property="og:description" content="Personal Portfolio" /><meta name="author" content="Brian Serwadda" />
 	</head>
 	<body class="is-preload">
