--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta name="description" content="Personal Portfolio" />
 		<meta name="title" property="og:title" content="Personal Portfolio" />
 		<meta property="og:type" content="website" />
-		<meta name="image" property="og:image" content="https://www.flickr.com/photos/202689445@N08/shares/NB6J0050Qh" />
+		<meta name="image" property="og:image" content="https://live.staticflickr.com/65535/54454084109_676b7901ad_h.jpg" />
 		<meta name="description" property="og:description" content="Personal Portfolio" /><meta name="author" content="Brian Serwadda" />
 	</head>
 	<body class="is-preload">
