--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 								<li><a href="#about">Edu</a></li>
 								<li><a href="#work">Work</a></li>
 								<li><a href="#project">Projects</a></li>
-								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -58,18 +57,54 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<div>
+									<h4 style="float:left">Financial Analyst<br />North Suffolk Community Services</h4>
+									<h4 style="float:right">April 2025 - Present</h4>
+								</div>
+								<ul style="clear:both;">
+									<li>
+										Supported financial operations in a regulated healthcare setting, processing payroll and managing departmental expense allocations with accuracy and discretion.
+									</li>
+									<li>
+										Reconciled employee timecards and vendor invoices, contributing to monthly reporting packages used by finance leadership for budget reviews.
+									</li>
+									<li>
+										Ensured compliance with state funding regulations and internal audit controls, reinforcing an understanding of risk management in financial environments. 
+									</li>
+									<li>
+										Streamlined internal workflows by identifying reporting inefficiencies and implementing Excel-based solutions to reduce processing time by 30%. 
+									</li>									
+								</ul>
+								<div>
+									<h4 style="float:left">Private Equity Intern<br />Project Destined</h4>
+									<h4 style="float:right">March 2025 - Present</h4>
+								</div>
+								<ul style="clear:both;">
+									<li>
+										Conducted market research and industry analyses for potential buyout targets in software and healthcare sectors.
+									</li>
+									<li>
+										Built and stress-tested LBO models to evaluate IRR and MoM returns under multiple scenarios.
+									</li>
+									<li>
+										Participated in due diligence, focusing on financial performance, debt structure, and cash flow forecasting. 
+									</li>
+									<li>
+										Created investment memos for IC presentations; one deal progressed to term sheet stage. 
+									</li>
+								</ul>
+								<div>
 									<h4 style="float:left">Financial Data Analyst<br />Boston Financial</h4>
 									<h4 style="float:right">January 2025 - March 2025</h4>
 								</div>
 								<ul style="clear:both;">
 									<li>
-										Analyzed 500+ year-end financial statements for 2,300+ LIHTC properties, ensuring accuracy and regulatory compliance.
+										Analyzed client portfolios across mutual funds and real estate investment trusts (REITs).
 									</li>
 									<li>
-										Reconciled $50M+ in portfolio financials and collaborated with reporting analysts to improve data quality and reporting workflows.
+										Automated monthly performance reports using Excel VBA and Power BI, reducing reporting time by 40%.
 									</li>
 									<li>
-										Maintained and updated proprietary financial systems supporting investor reports and underwriting processes. 
+										Reconciled portfolio NAVs and ensured accuracy in fund accounting reports used in quarterly reviews. 
 									</li>
 								</ul>
 								<div>
@@ -78,13 +113,13 @@
 								</div>
 								<ul style="clear:both;">
 									<li>
-										Developed and presented financial models to assess $10M+ in real estate deals, leveraging Excel. 
+										Modeled pro formas including NOI, DSCR, cap rates, and IRR for multifamily and mixed-use properties.
 									</li>
 									<li>
-										Conducted market research, trend analysis, and volume tracking to support investment strategy and capital structure planning.
+										Performed market comps and lease analyses to support acquisition decisions in East Coast markets.
 									</li>
 									<li>
-										Projected 15% ROI in collaboration with leadership through optimization of deal-level inputs.
+										Presented investment thesis in a Shark Tank-style pitch to real estate professionals and mentors.
 									</li>
 								</ul>
 							</ul>
