--- a/index.html
+++ b/index.html
@@ -49,8 +49,30 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Introduction</h2>
-								<p>Interested in Quantitative Systematic Trading (Equities, Options, Volatility), financial markets, A.I, data analysis & modelling, machine learning, and real estate. 
+								<p>
+                                                                    Interested in Quantitative Systematic Trading (Equities, Options, Volatility), financial markets, A.I, data analysis & modelling, machine learning, and real estate. 
 								</p>
+								    <h3>Professional Summary</h3>
+                                                                  <p>
+                                                                     Finance and analytics professional with a background in private equity, real estate, and structured data analysis. Skilled in building financial models, analyzing investment opportunities, and synthesizing market intelligence into actionable strategies. Holds a Master’s in Applied Business Analytics and brings experience across portfolio evaluation, risk analysis, and technical modeling. Combines a data-driven mindset with deep interest in capital markets, systematic trading strategies, and innovation at the intersection of finance and technology.
+                                                                  </p>
+								  <h3>Technical Skills</h3>
+                                                                  <ul>
+                                                                      <li><strong>Financial Modeling & Analysis:</strong> DCF, LBO, Comps, Pro Forma, IRR, DSCR, NAV Reconciliation</li>
+                                                                      <li><strong>Valuation Tools & Platforms:</strong> FactSet, Bloomberg, Capital IQ, Excel (advanced), PowerPoint</li>
+                                                                      <li><strong>Data Analytics & Visualization:</strong> Python (pandas, numpy, matplotlib), R, SQL, Power BI, Tableau</li>
+                                                                      <li><strong>Automation & Reporting:</strong> Excel VBA, Power Query, GitHub, Supabase APIs</li>
+                                                                      <li><strong>Machine Learning:</strong> Forecasting, NLP, Supervised/Unsupervised Models</li>
+                                                                      <li><strong>Real Estate Analytics:</strong> Market comps, cap rate analysis, acquisition modeling, rental forecasting</li>
+                                                                 </ul>
+								     <h3>Leadership & Affiliations</h3>
+                                                                  <ul>
+                                                                        <li><strong>Boston University Finance Club</strong> – Junior Analyst, TMT Sector</li>
+                                                                        <li><strong>BU Financial Modeling Club</strong> – Analyst (LBOs, Black-Scholes options, PE modeling)</li>
+                                                                        <li><strong>Project Destined Fellow</strong> – National real estate investment program</li>
+                                                                        <li><strong>Amplify Trading Simulation</strong> – Sell-side trading, asset management, market making</li>
+                                                                        <li><strong>CFA Society Boston</strong> – Student Member</li>
+                                                                   </ul>
 							</article>
 
 						<!-- Work -->
